# Real-Time-Geo-Tracking-Application

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  reverse_geocode_worker.py  tracker_consumer.py
models/: dummy.py  model.py
utils/: salesman_routing.py  tracking.py
